Add html meta and link

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/mobile-icon.png" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Discover a world of cutting-edge technology at our online phone shop. Find the latest smartphones, accessories, and more, all at your fingertips. Shop now!"
+    />
+    <meta name="handheld-friendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./src/assets/icon.png" rel="apple-touch-startup-image" />
+    <link rel="apple-touch-icon" href="./src/assets/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/mobile-icon.png" />
     <title>Phone Paradise</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
