Change server folder and create about section

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      src="https://kit.fontawesome.com/c5f02141cd.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
