Add defer to script

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" defer src="/src/main.tsx"></script>
     <script
+      defer
       src="https://kit.fontawesome.com/c5f02141cd.js"
       crossorigin="anonymous"
     ></script>
