Connect firebase with project :D

--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
       src="https://kit.fontawesome.com/c5f02141cd.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore-compat.js"></script>
   </body>
 </html>
